# cvrp-gen

./: Cargo.toml  compile.sh  run.sh  team.txt
pretty-results/: 101_11_2.vrp.sol  241_22_1.vrp.sol
solutions/: 101_11_2.vrp.sol  101_8_1.vrp.sol  121_7_1.vrp.sol  135_7_1.vrp.sol  151_15_1.vrp.sol  16_5_1.vrp.sol  200_16_2.vrp.sol  21_4_1.vrp.sol  241_22_1.vrp.sol  262_25_1.vrp.sol  30_4_1.vrp.sol  386_47_1.vrp.sol  41_14_1.vrp.sol  45_4_1.vrp.sol  51_5_1.vrp.sol  76_8_2.vrp.sol
solutions-mac/solutions/: 101_11_2.vrp.sol  135_7_1.vrp.sol  151_15_1.vrp.sol  16_5_1.vrp.sol  200_16_2.vrp.sol  241_22_1.vrp.sol  45_4_1.vrp.sol  51_5_1.vrp.sol
src/: genetic.rs  hgsls.rs  individual.rs  local_search.rs  ls_operators.rs  main.rs  params.rs  polar_sector.rs  population.rs  vrp_instance.rs
